syntax = "proto3";
package DomainServices.DocumentOnSAService.LinkEArchivIdToDocumentOnSA;
option csharp_namespace = "DomainServices.DocumentOnSAService.Contracts";

import "google/protobuf/wrappers.proto";

message LinkEArchivIdToDocumentOnSARequest {
	
	int32 DocumentOnSAId = 1;
	
	string EArchivId = 2;
}